--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/marima logo.PNG" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PM Motors Ltd - Premium Automotive Excellence</title>
     <meta name="description" content="PM Motors Ltd - Your trusted partner in premium automobiles. Only the Best vehicles with exceptional quality and service." />
